Use Boolean.valueOf insted of new Boolean
git-svn-id: https://scm.mmbase.org/mmbase/trunk@13597 91430c5f-d668-0410-9e7d-dd663366dcfd